--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="designs.js"></script>
 </head>
 <body>
     <h1>Lab: Pixel Art Maker</h1>
